Finished the basic tutorial "Building your first app"
Next step:
http://developer.android.com/training/camera/photobasics.html

--- a/banknote-app/res/values/strings.xml
+++ b/banknote-app/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="app_name">banknote-app</string>
     <string name="action_settings">Settings</string>
+    <string name="edit_message">Enter a message</string>
+    <string name="button_send">Send</string>
+    <string name="title_activity_display_message">My message</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
