Button and ImageViewer, just the thumbnail is used (testing)
A button to take a snapshot and an Imageviewer were added and
they are working as expected.

--- a/banknote-app/res/values/strings.xml
+++ b/banknote-app/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="button_send">Send</string>
     <string name="title_activity_display_message">My message</string>
     <string name="hello_world">Hello world!</string>
+    <string name="take_photo">Snapshoot!</string>
 
 </resources>
