Full size photo storage; new window to show the taken photo
* The new window just have an ImageViewer.
* The image is stored in a public directory.

--- a/banknote-app/res/values/strings.xml
+++ b/banknote-app/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_display_message">My message</string>
     <string name="hello_world">Hello world!</string>
     <string name="take_photo">Snapshoot!</string>
+    <string name="title_activity_display_image">DisplayImage</string>
 
 </resources>
